2004-04-16  Colin Walters  <walters@redhat.com>

	* gconf/gconf-internals.c (gconf_activate_server): Move temporary
	directory creation into daemon code, so that we play better with
	SELinux.  Patch reviewed by (and several improvements suggested by)
	Mark McLoughlin <mark@skynet.ie>.

2004-04-13  Mark McLoughlin  <mark@skynet.ie>

	Fix pointed out by Frédéric L. W. Meunier <1@pervalidus.net>.

	* gconf.m4.in: add quotes around AM_GCONF_SOURCE_2 to
	quell autoconf's rudeness.

2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-06  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-05  Mark McLoughlin  <mark@skynet.ie>

	Revert the --dump behaviour change (not dumping schema defaults).
	The --ignore-schema-defaults argument on HEAD must be used to
	get that effect now.

	* gconf/gconftool.c: (dump_entries_in_dir): always dump the value
	even if it is the schema default.

2004-04-02  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (set_values), (process_entry): handle
	an <entry> with only a <schema_name> correctly.

2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (dump_entries_in_dir): don't dump
	the value if its the schema default.

2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/default.path.in: fix the position of the
	local-defaults.path include. Bug #137578.

2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-database.c:
	(safe_g_hash_table_insert): remove - no hash table here.

2004-03-24  Mark McLoughlin  <mark@skynet.ie>
	
	* gconf/gconf-database.c: (impl_ConfigDatabase_set): don't
	convert the value into a string and then do nothing with it.
	
2004-03-24  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: kill the message-of-doom.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.
