@@ -1,3 +1,13 @@
+2004-04-19  Mark McLoughlin  <mark@skynet.ie>
+
+	Based on a patch from Ryan Lovett <ryan@ocf.berkeley.edu>
+	in bug #95198.
+
+	* backends/markup-backend.c: (resolve_address):
+	  backends/xml-backend.c: (resolve_address): check to see
+	if the dir exists before trying to create it rather than
+	relying on EEXIST from mkdir.
+
 2004-04-16  Colin Walters  <walters@redhat.com>
 
 	* gconf/gconf-internals.c (gconf_activate_server): Move temporary
